--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -159,7 +159,12 @@
                     processData:false,//必填 必须false 才会避开jq对formdata的默认处理 XMLHttpRequest才会对formdata进行正确处理  否则会报Illegal invocation错误
                     contentType:false,//必填 必须false 才会加上正确的Content-Type
                     success:function(res) {
-                        console.log(res)
+                        res = JSON.parse(res)
+                        if(res.status == 200){
+                            window.location.href = "/searchResult"
+                        }else{
+                            window.location.href = "/"
+                        }
                     }
                 })
             })
