--- a/src/main/resources/templates/search_byFile.html
+++ b/src/main/resources/templates/search_byFile.html
@@ -231,23 +231,95 @@
     }
     function displayResult(){
         result_json = JSON.parse($("span#result_str").text())
-        console.log(result_json)
 
+        console.log(result_json)
+        let total_page_count = (Math.ceil(result_json.count / 20))
+        let cur_page = result_json.page;
         let s = ''
-        for(var i = 0; i < 20; i++){
+        for(let i = 0; i < 20; i++){
             s += '<tr style="border:0px;background-color:  rgba(237,28,36,'
-                + result_json.dist[i] +
-                ')">\n' +
+                + result_json.dist[i] * 0.8 +
+                ')" onmousedown="showCode('+ i + ')">\n' +
+                '                <td>' + result_json.i[i] + '</td>\n' +
                 '                <td>' + result_json.location[i] + '</td>\n' +
-                '                <td>' + '</td>\n' +
                 '                <td>' + result_json.dist[i]+'</td>\n' +
                 '            </tr>'
         }
         $("#table_body").html(s)
         $("#result_caption").html("Result " + result_json.page * 20 + " - " + (result_json.page + 1) * 20+ " All:" + result_json.count)
+
+        let pageNavHtml = '<ul class="pagination" style="text-align: center" id="nav_page">\n'
+        pageNavHtml +=   '                <li class="page-item"><a class="page-link" href="#">Previous</a></li>\n';
+        let from = (cur_page - 3 < 0 ? 0 : cur_page - 3);
+        let to = (cur_page + 3 > total_page_count ? total_page_count - 1: cur_page + 3);
+        for(let i = from; i < to; i++){
+            pageNavHtml +=
+                '                <li class="page-item '
+            + (i == cur_page ? "active" :"") +
+            '"><a class="page-link" href="#" onmousedown="switchResultPage(this)">'
+            +(i) +
+            '</a></li>\n' ;
+
+        }
+        pageNavHtml +=   '                <li class="page-item"><a class="page-link" href="#">Next</a></li>\n' ;
+        pageNavHtml += '            </ul>';
+
+        $('ul#nav_page').html(pageNavHtml)
     }
 
+    function showCode(item_index){
 
+        $.ajax({
+            url: "/sc/file",
+            type:'post',
+            data: {
+                path: result_json.location[item_index]
+            },
+            dataType: 'json',
+            contentType: 'application/x-www-form-urlencoded',
+            success:function(res) {
+                console.log(res)
+                layer.open({
+                    type: 1,
+                    title: result_json.location[item_index],
+                    skin: 'layui-layer-rim', //加上边框
+                    area: ['70%', '80%'], //宽高
+                    content: "<textarea readonly style='width: 100%; height: 100%'>" + res.code +"</textarea>"
+                });
+            }
+        })
+
+
+    }
+    function splitFileName(text){
+        let pos = text.lastIndexOf("\\");
+        return text.substring(pos + 1);
+
+    }
+    function switchResultPage(e){
+        let targetPage = (parseInt(e.innerHTML))
+        
+        $.ajax({
+            url: "/search/byFile",
+            type:'post',
+            data: {
+                fUUID : result_json.uuid,
+                page: targetPage
+            },
+            dataType: 'json',
+            contentType: 'application/x-www-form-urlencoded',
+            success:function(res) {
+                console.log(res)
+                //res = JSON.parse(res)
+
+                if(res.status == 200){
+                    location.reload(true)
+                }else{
+                    window.location.href = "/"
+                }
+            }
+        })
+    }
     function toCreateProject(){
         window.location.href = "/upload/main"
     }
