--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<img src="https://iso.500px.com/wp-content/uploads/2014/07/big-one.jpg" onclick="showPreview()">
+<img src="../img/test2.png" onclick="showPreview()">
 
 
 <!--<h2>双击图片显示大图</h2>
