--- a/src/main/resources/templates/project-page.html
+++ b/src/main/resources/templates/project-page.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/c1.css">
     <link rel="stylesheet" type="text/css" href="/css/proj.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/gallery/gStyle.css" />
+
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.cookie.js"></script>
     <script src="/layer/layer.js"></script>
@@ -19,6 +23,31 @@
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
+
+<style>
+
+    @-webkit-keyframes  shineRed {
+        from { -webkit-box-shadow: 0 0 5px #bbb; }
+        50% { -webkit-box-shadow: 0 0 10px red; }
+        to { -webkit-box-shadow: 0 0 5px #bbb; }
+    }
+    @-webkit-keyframes shineBlue {
+        from { -webkit-box-shadow: 0 0 9px #333; }
+        50% { -webkit-box-shadow: 0 0 18px blue; }
+        to { -webkit-box-shadow: 0 0 9px #333; }
+    }
+    .shine_red{
+        -webkit-animation-name: shineRed;
+        -webkit-animation-duration: 3s;
+        -webkit-animation-iteration-count: infinite;
+    }
+    .shine_blue{
+        -webkit-animation-name: shineBlue;
+        -webkit-animation-duration: 3s;
+        -webkit-animation-iteration-count: infinite;
+    }
+
+</style>
 <body>
 
 <div id="app-proj">
@@ -30,7 +59,7 @@
         <section class="cover">
             <div class="cover-frame">
                 <div id="bg-box" class="bg-box" style="background: #000; opacity: 60%">
-                    <img src="/img/cover3.jpg" style="opacity: 0.6;filter: alpha(opacity=60);">
+                    <img src="/img/cover3.jpg" style="opacity: 0.3;filter: alpha(opacity=60);">
                 </div>
 
                 <div class="text-center text-white" style="position: absolute; top:0; width: 100%;left: 4.8%; height: 5rem; background: #EEEEEE">
@@ -53,13 +82,14 @@
 
 
 
-                <div id="displayDiv" style='position:absolute; top:10%; width: 90%;
+
+                <div id="displayDiv" class="shine_red" style='position:absolute; top:10%; width: 90%;
                 text-align: center; background-color:rgba(200,200,200,0.7); margin-left: 9.5rem; margin-top: 2rem; overflow:auto'>
 
                     <ul class="nav nav-tabs" style="text-align: center">
                         <li class="active"><a href="#short_search" data-toggle="tab">源文件列表</a></li>
                         <li><a href="#doc2vec" data-toggle="tab">Doc2Vec可视化</a></li>
-                        <li><a href="#searchGrammar" data-toggle="tab">检索语法</a></li>
+                        <li><a href="#hierachical_clustring" data-toggle="tab">阶层聚类分析</a></li>
                         <li><a href="#textVisualize" data-toggle="tab">语料分析以及可视化</a></li>
                         <li><a href="#featureExtract" data-toggle="tab">语料特征提取</a></li>
                     </ul>
@@ -75,13 +105,13 @@
                                 max-height:300px">
 
                                     <table class="table table-hover table-bordered" style="width: 90%; margin-left:5%;
-                                    margin-top:-2%; text-align: center; overflow-y:auto; max-height:300px">
+                                    margin-top:-2%; text-align: center; overflow-y:auto; max-height:300px; ">
                                         <caption th:text="${pName}" style="font-size: 14pt; color: #000000" ></caption>
                                         <thead>
                                         <tr>
                                             <th>文件名</th>
                                             <th>行数</th>
-                                            <th>词数</th>
+                                            <th>AST</th>
                                             <th>操作</th>
                                         </tr>
                                         </thead>
@@ -108,36 +138,19 @@
                         </div>
 
 
-                        <div class="tab-pane fade" id="searchGrammar">
-                            <div class="form-group" style="margin-top: 1%;">
-                                <div>
-                                    <h4 style="margin-left: 1%; display: inline">输入语料进行语料的文法检索</h4>
-                                    <button onclick="searchGrammar_onclick(this)" type="button" class="btn btn-primary" style="margin-left:2%;display: inline;text-align: right;">检索</button>
-                                </div>
-
-                                <textarea id="textInput_searchGrammar" class="form-control" style="margin-left: 2%; width: 96%;margin-top: 1%;" rows="8"></textarea>
+                        <div class="tab-pane fade" id="hierachical_clustring" style=" text-align: center">
+                            <div style="margin-top: 1%;">
+                                <button type="button" class="btn btn-default" onclick="showHerachicalClustering()">获取阶层聚类数据</button>
                             </div>
-
-
-                            <div class="container">
-                                <hr/>
-                                <div class="panel-group_searchGrammar" id="result_searchGrammar" role="tablist">
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading" role="tab" id="headingOne">
-                                            <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse_1">item1</a>
-                                            </h4>
-                                        </div>
-
-                                        <div id="collapse_1" class="panel-collapse collapse" role="tabpanel">
-                                            <div class="panel-body">
-                                                test
-                                            </div>
-                                        </div>
-                                    </div>
-
+                            <div style="text-align: center; overflow-x: hidden">
+                                <div style="text-align: center;width: 100%;height:63rem;margin-left: 1%; overflow-x: hidden">
+                                    <img id="h_img_preview" hidden="hidden" style="width: 90%; height: 90%" src="/img/test2.png"
+                                         onclick="showPopUpHerachicalView()"/>
                                 </div>
                             </div>
+
+
+
                         </div>
                         <div class="tab-pane fade" id="textVisualize" style="text-align: center">
                             <button class="btn btn-primary" style="margin-top: 2%" onclick="ajaxtest()">test</button>
@@ -181,7 +194,61 @@
 </body>
 
 
+
+
 <script>
+    function showPopUpHerachicalView(){
+
+        layer.open({
+            type: 2,
+            area: ['80%', '90%'],
+            fixed: false, //不固定
+            maxmin: true,
+            title: false,
+            closeBtn: 0,
+            shadeClose: true,
+            btn: false,
+            shade: 0.8,
+            content: '/gallery/gallery.html',
+            success:function (dom) {
+                let $iframeDom=$(dom[0]).find("iframe").eq(0).contents();
+                let himgBox = document.getElementById("h_img_preview")
+                $iframeDom.find("div#zoom").html('' +
+                    '<div style="text-align: center">' +
+                    '<img id=\'zoom_img\' src="' + himgBox.getAttribute("src") + '" alt="zoom"' +
+                    'style="width: auto;height: auto;max-width: 100%;max-height: 100%" ></div>>')
+                console.log($iframeDom.find("div#zoom"))
+            }
+        });
+    }
+
+    function showHerachicalClustering(){
+        let pName = $('input#hidden_pName').val()
+        let isInd = $('input#hidden_is_ind').val()
+        let porg = $('input#hidden_porg').val()
+
+        $.ajax({
+            url : 'http://127.0.0.1:5001/img/hierarchy',
+            data:JSON.stringify({
+                "isInd" : $("input#hidden_is_ind").val(),
+                "pName": $("input#hidden_pName").val(),
+                "belongName": $("input#hidden_is_ind").val() == 1? $("input#hidden_uName").val() : $("input#hidden_porg").val()
+            }),
+            type: 'post',
+            dataType: 'json',
+            contentType: 'json',
+            success(s){
+                console.log(s)
+                let himgBox = document.getElementById("h_img_preview")
+                let bName = $("input#hidden_is_ind").val() == 1? $("input#hidden_uName").val() : $("input#hidden_porg").val()
+                himgBox.setAttribute("src", "/himg/"+(isInd=="1"?"inv":"org") + "/" + bName +"/"+pName+"_h.png")
+            },
+            error(e){
+                console.log(e)
+            }
+        });
+        $("img#h_img_preview").removeAttr("hidden")
+    }
 
     function showWvec2TSNEResult(){
         $.ajax({
@@ -225,11 +292,13 @@
                 console.log(filesJson)
                 block_str = ""
                 for(let f in files){
-                    block_str += '<tr id="tab-item-'+ f +'" style="background-image: linear-gradient(90deg , #f0ad4e 1%, transparent 5%); ">\n' +
+                    block_str += '<tr id="tab-item-'+ f +'" style="background-image: linear-gradient(90deg , #f0ad4e 1%, transparent 5%); "' +
+                        'onclick="showSourceCode('+ f +')">\n' +
                         '                                            <td>' + files[f] +'</td>\n' +
                         '                                            <td></td>\n' +
-                        '                                            <td></td>\n' +
-                        '       <td><button type="button" id="d_btn_'+ f +'" class="btn btn-primary" onclick="distributionAnalyze('+ f +')">分布相似度分析</button></td>\n' +
+                        '       <td><button type="button" id="ast_btn_'+ f +'" class="btn btn-primary" onclick="showAst(event,'+ f +')">显示</button></td>\n' +
+
+                        '       <td><button type="button" id="d_btn_'+ f +'" class="btn btn-primary" onclick="distributionAnalyze(event,'+ f +')">分布相似度分析</button></td>\n' +
                         '                                        </tr>\n';
 
                 }
@@ -240,6 +309,33 @@
                 console.log(e)
             }
         });
+    }
+    function showSourceCode(e){
+        let pName = $('input#hidden_pName').val()
+        let isInd = $('input#hidden_is_ind').val()
+        let porg = $('input#hidden_porg').val()
+        let uname = $('input#hidden_uName').val()
+        var fName = '\\'+ (isInd == 1? 'user' :'org')+'\\'+(isInd == 1? uname:porg) +"\\"+pName+"\\" + filesJson.files[e]
+        console.log(fName)
+        $.ajax({
+            url: "/sc/file",
+            type:'post',
+            data: {
+                path: fName
+            },
+            dataType: 'json',
+            contentType: 'application/x-www-form-urlencoded',
+            success:function(res) {
+                console.log(res)
+                layer.open({
+                    type: 1,
+                    title: filesJson.files[e],
+                    skin: 'layui-layer-rim', //加上边框
+                    area: ['70%', '85%'], //宽高
+                    content: "<textarea readonly style='width: 100%; height: 99%;'>" + res.code +"</textarea>"
+                });
+            }
+        })
     }
 
     function showProjectColor(){
@@ -268,8 +364,56 @@
         })
         return
     }
-    function distributionAnalyze(findex){
+    function showAst(e, findex){
+        e.stopPropagation();
+        let pName = $('input#hidden_pName').val()
+        let isInd = $('input#hidden_is_ind').val()
+        let porg = $('input#hidden_porg').val()
+        let uname = $('input#hidden_uName').val()
+        const fName = '\\' + (isInd == 1 ? 'user' : 'org') + '\\' + (isInd == 1 ? uname : porg) + "\\" + pName;
+        console.log(fName)
+        $.ajax({
+            url: "/sc/ast",
+            type:'post',
+            data: {
+                projPath: fName,
+                fileRelativePath: filesJson.files[findex]
+            },
+            dataType: 'json',
+            contentType: 'application/x-www-form-urlencoded',
+            success:function(res) {
+                console.log(res);
+                let uri = res.uri
+                layer.open({
+                    type: 2,
+                    area: ['80%', '90%'],
+                    fixed: false, //不固定
+                    maxmin: true,
+                    title: false,
+                    closeBtn: 0,
+                    shadeClose: true,
+                    btn: false,
+                    shade: 0.8,
+                    content: '/gallery/gallery.html',
+                    success:function (dom) {
+                        let $iframeDom=$(dom[0]).find("iframe").eq(0).contents();
+                        let htmlStr = ('' +
+                            '<div style="text-align: center">' +
+                            '<img id=\'zoom_img\' src="/ast/' + uri +  '" alt="zoom" style="' +
+                            'width: auto;height: inherit;max-height: 100%;max-width: 100%">' +
 
+                            '</div>')
+
+                        $iframeDom.find("div#zoom")
+                            .html(htmlStr)
+
+                    }
+                });
+            }
+        })
+    }
+    function distributionAnalyze(e, findex){
+        e.stopPropagation();
         let c1 = ' <div class="panel-group" id="accordion">\n' +
             '        <div class="panel panel-default">\n'
         let c2 =
